test/regress/15A80F68.test
; Test for: Confusing error message with ledger v3 with invalid input

2008/03/03
    A                          (2 FOO @ 10.00 EUR) = 20.00 EUR
    B

test bal -> 1
__ERROR__
While parsing file "$FILE", line 4:
While parsing posting:
  A                          (2 FOO @ 10.00 EUR) = 20.00 EUR
                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Invalid char '@'
end test

